JG-2008-03-17-0: CVS:      Moved V61u4_TAG
                           - include in 6.1u4:      AP-2008-03-17-0,
                           - not included in 6.1u4: PJ-2008-03-04-0.
----------------------------------------------------------------------

AP-2008-03-17-0: Bugfix:   Fix of incorrect usage summary for larger databases.
                 Review:   JO, AP

PJ-2008-03-04-0: Bugfix:   Validation of the Filter List in Simple Query builder
                           fails
                 Bugfix:   Row Limit in ARCo Simple Query builder cannot be 
                           empty
                 Bugfix:   Validation of the Filter List in Simple Query builder
                           fails
                 Bugster:  6670264, 6661461, 6670264
                 Review:   JO

JG-2008-02-28-0: CVS:       Created V61u4_TAG.
----------------------------------------------

AP-2008-02-28-0: Enhancem.: ARCo reporting installation - get all required SWC
                            information for installation.
                 Review:    LP

JO-2008-02-27-0: Bugfix:   Fixed commit JO-2008-02-22-0 to work with arcorun
                 Review:   PJ

JO-2008-02-22-0: Bugfix:   In SJWC on Oracle dates appear truncated to just MM/DD/YYYY
                           Row Limit in Simple Query uses wrong syntax
                 Bugster:  6661500, 6640762
                 Issue:    2503
                 Review:   AP

AP-2008-02-20-0: Bugfix:   ARCo reporting module installation script is broken 
                           on Red Hat Enterprise Linux 4 Update 4
                 Bugster:  6663741
                 Issue:    2498
                 Review:   JG

JO-2008-02-15-0: Bugfix:   Batch failure on Oracle database.
                 Bugster:  6659300
                 Review:   PJ

JO-2008-02-11-0: Bugfix:    Queries Average Job Turnaround Time and Average Job
                            Wait Time irresponsive on MySQL
                 Bugster:   6661473